pasando el css a scss, termine en inicio

--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -31,13 +31,14 @@
             </div>
         </nav>
     </header>
-    <div class="barra-buscar container">
-        <form class="d-flex justify-content-center" role="search">
-            <input class="form-control me-2" type="search" placeholder="Busca un libro" aria-label="Search">
-            <button class="btn btn-outline-warning" type="submit">Buscar</button>
-        </form>
     </div>
     <main>
+        <div class="barra-buscar container">
+            <form class="d-flex justify-content-center" role="search">
+                <input class="form-control me-2" type="search" placeholder="Busca un libro" aria-label="Search">
+                <button class="btn btn-outline-warning" type="submit">Buscar</button>
+            </form>
+        </div>
         <h2 class="h2-titulos text-center">Los mas vistos</h2>
         <div class="section123 d-flex flex-column">
             <section>
