--- a/pages/mas_vistos.html
+++ b/pages/mas_vistos.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lectura libre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Si estas buscando libros gratis online aca tenemos el catalogo mas grande y gratis!">
+    <meta name="keywords" content="LIBROS, LIBROS ONLINE, LIBROS GRATIS, LECTURA, LECTURA ONLINE, LECTURA GRATIS, LECTURA LIBRE,">
+    <title>mas vistos/Lectura libre</title>
     <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -15,7 +19,7 @@
                 <a class="logo-header" href="./index.html">
                     <img src="../assets/logo.png" alt="logo de la pagina" title="logo de la pagina letra l con fuego">
                 </a>    
-                <h1 class="nombre-pagina">Lectura Libre</h1>
+                <h1 class="nombre-pagina animate__animated animate__fadeInUp">Lectura Libre</h1>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -30,15 +34,14 @@
                 </div>
             </div>
         </nav>
-    </header>
-    </div>
-    <main>
         <div class="barra-buscar container">
             <form class="d-flex justify-content-center" role="search">
                 <input class="form-control me-2" type="search" placeholder="Busca un libro" aria-label="Search">
                 <button class="btn btn-outline-warning" type="submit">Buscar</button>
             </form>
         </div>
+    </header>
+    <main>
         <h2 class="h2-titulos text-center">Los mas vistos</h2>
         <div class="section123 d-flex flex-column">
             <section>
