--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lectura libre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Si estas buscando libros gratis online aca tenemos el catalogo mas grande y gratis!">
+    <meta name="keywords" content="LIBROS, LIBROS ONLINE, LIBROS GRATIS, LECTURA, LECTURA ONLINE, LECTURA GRATIS, LECTURA LIBRE,">
+    <title>novedades/Lectura libre</title>
     <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -15,7 +19,7 @@
                 <a class="logo-header" href="./index.html">
                     <img src="../assets/logo.png" alt="logo de la pagina" title="logo de la pagina letra l con fuego">
                 </a>    
-                <h1 class="nombre-pagina">Lectura Libre</h1>
+                <h1 class="nombre-pagina animate__animated animate__fadeInUp">Lectura Libre</h1>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -30,14 +34,14 @@
                 </div>
             </div>
         </nav>
-    </header>
-    <main>
         <div class="barra-buscar container">
             <form class="d-flex justify-content-center" role="search">
                 <input class="form-control me-2" type="search" placeholder="Busca un libro" aria-label="Search">
                 <button class="btn btn-outline-warning" type="submit">Buscar</button>
             </form>
         </div>
+    </header>
+    <main>
         <h2 class="h2-titulos text-center">Próximos Lanzamientos</h2>
         <div class="section123 d-flex flex-column">
             <section>
@@ -63,20 +67,20 @@
         </div>
         <h2 class="h2-titulos text-center">Noticias Semanales</h2>
         <div class="section-novedades d-flex flex-column">
-            <section class="container-fluid">
+            <section class="container-fluid section-novedades">
                 <ul class=" row list-unstyled">
                     <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
-                        <h3 class="text-center">Murió Leonard Riggio, quien forjó un imperio con Barnes & Noble</h3>
+                        <h3 class="text-center h3-titulos-novedades">Murió Leonard Riggio, quien forjó un imperio con Barnes & Noble</h3>
                         <img src="../assets/noticia1.jpg" alt="Noticia 1">
                         <p>Leonard Riggio, quien transformó la industria editorial al crear Barnes & Noble y se convirtió en el librero más poderoso de Estados Unidos antes de que su empresa fuera superada por el auge de Amazon, murió a los 83 años.</p>
                     </li>
                     <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
-                        <h3 class="text-center">Julio Cortázar a los 110 años: Los mejores libros para entrar en su universo</h3>
+                        <h3 class="text-center h3-titulos-novedades">Julio Cortázar a los 110 años: Los mejores libros para entrar en su universo</h3>
                         <img src="../assets/noticia2.jpg" alt="Noticia 2">
                         <p>Nacido un 26 de agosto de 1914, el argentino fue un escritor con una obra muy particular y creativa. A veces densa, pero exquisitamente literaria, su narrativa sigue siendo un imperdible. En Culto lo recordamos con una guía breve para comenzar a leerlo sin fracasar en el intento.</p>
                     </li>
                     <li class="col-12 col-md-6 col-xl-4 d-flex flex-wrap justify-content-center">
-                        <h3 class="text-center">Los libros de la semana y el ranking de bestsellers de agosto</h3>
+                        <h3 class="text-center h3-titulos-novedades">Los libros de la semana y el ranking de bestsellers de agosto</h3>
                         <img src="../assets/noticia3.jpg" alt="Noticia 3">
                         <p>Una novela norteamericana que llega con las mejores recomendaciones y un policial escrito por un experto. Además, los títulos más vendidos.</p>
                     </li>
