arregle un margen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="logo-header" href="./index.html">
                     <img src="./assets/logo.png" alt="logo de la pagina" title="lectura libre">
                 </a>    
-                <h1 class="nombre-pagina animate__animated animate__fadeInUp">Lectura Libre</h1>
+                <h1 class="nombre-pagina animate__animated animate__rubberBand">Lectura Libre</h1>
                 <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
