--- a/pages/generos.html
+++ b/pages/generos.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="logo-header" href="./index.html">
+                <a class="logo-header" href="../index.html">
                     <img src="../assets/logo.png" alt="logo de la pagina" title="logo de la pagina letra l con fuego">
                 </a>    
                 <h1 class="nombre-pagina animate__animated animate__fadeInUp">Lectura Libre</h1>
