--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Si estas buscando libros gratis online aca tenemos el catalogo mas grande y gratis!">
     <meta name="keywords" content="LIBROS, LIBROS ONLINE, LIBROS GRATIS, LECTURA, LECTURA ONLINE, LECTURA GRATIS, LECTURA LIBRE,">
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -46,7 +47,7 @@
             <h2 class="h2-titulos">Recomendaciones Semanales</h2>
             <ul class="libros-recomendaciones-semanales">
                 <li>
-                    <img class="rounded mb-3 animate__animated animate__fadeInLeft" src="./assets/señordelosanillos.png" alt="libro señor de los anillos">
+                    <img class="rounded mb-3" src="./assets/señordelosanillos.png" alt="libro señor de los anillos">
                     <p>En Las dos torres, la segunda parte de la trilogía El Señor de los Anillos de J.R.R. Tolkien, los personajes se enfrentan a desafíos cruciales en sus respectivas misiones. Frodo y Sam avanzan hacia Mordor con el Anillo Único, mientras que Aragorn, Legolas y Gimli luchan contra las fuerzas de Saruman en la épica batalla de Helm's Deep.   
                     </p>
                 </li>
@@ -72,19 +73,19 @@
                 <h2 class="h2-titulos">Recien Agregados</h2>
                 <ul class="libros-recien-agregados">
                     <li>
-                        <img class="rounded" src="./assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
+                        <img class="rounded animate__animated animate__slideInLeft" src="./assets/bajolamismaestrella.jpg" alt="libro bajo la misma estrella">
                     </li>
                     <li>
-                        <img class="rounded" src="./assets/loscaballeros.jpg" alt="libro los caballeros de la noche">
+                        <img class="rounded animate__animated animate__slideInDown" src="./assets/loscaballeros.jpg" alt="libro los caballeros de la noche">
                     </li>
                     <li>
-                        <img class="rounded" src="./assets/xmen.png" alt="libro x men">
+                        <img class="rounded animate__animated animate__zoomIn" src="./assets/xmen.png" alt="libro x men">
                     </li>
                     <li>
-                        <img class="rounded" src="./assets/librowowsylvanas.png" alt="libro wow sylvanas">
+                        <img class="rounded animate__animated animate__slideInUp" src="./assets/librowowsylvanas.png" alt="libro wow sylvanas">
                     </li>
                     <li>
-                        <img class="rounded" src="./assets/percyjackson.png" alt="libro percy jackson">
+                        <img class="rounded animate__animated animate__slideInLeft" src="./assets/percyjackson.png" alt="libro percy jackson">
                     </li>
                 </ul>
             </section>
@@ -92,20 +93,20 @@
                 <h2 class="h2-titulos">Mas Vistos</h2>
                     <ul class="libros-mas-vistos">
                         <li>
-                            <img class="rounded" src="./assets/arthas.png" alt="libro arthas">
+                            <img class="rounded animate__animated animate__slideInLeft" src="./assets/arthas.png" alt="libro arthas">
                         </li>
                         <li>
-                            <img class="rounded" src="./assets/librodune.jpg" alt="libro dune">
+                            <img class="rounded animate__animated animate__slideInUp" src="./assets/librodune.jpg" alt="libro dune">
 
                         </li>
                         <li>
-                            <img class="rounded" src="./assets/harrypotter.png" alt="libro harry potter">
+                            <img class="rounded animate__animated animate__zoomIn" src="./assets/harrypotter.png" alt="libro harry potter">
                         </li>
                         <li>
-                            <img class="rounded" src="./assets/problematrescuerpos.png" alt="libro el problema de los tres cuerpos">
+                            <img class="rounded animate__animated animate__slideInDown" src="./assets/problematrescuerpos.png" alt="libro el problema de los tres cuerpos">
                         </li>
                         <li>
-                            <img class="rounded" src="./assets/señordelosanillos.png" alt="libro el señor de los anillos">
+                            <img class="rounded animate__animated animate__slideInLeft" src="./assets/señordelosanillos.png" alt="libro el señor de los anillos">
                         </li>
                     </ul>
             </section>
@@ -121,6 +122,7 @@
             <p>Todos los derechos reservados &copy; 2024</p>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html> 
